
    [*] Fixed handling of < and > characters in some engines where these characters has some meaning (XML for example).

    ============================
    QtilitiesCore:
    ============================
    [+] Added Factory::categoryForTag().
    [+] Added IFactoryProvider::categoryForTag().
    [+] Added IFactoryProvider::tagCategoryMap().

    [#] IFactoryProvider::providedFactoryTags() got a new OK parameter.

    ============================
    QtilitiesCoreGui:
    ============================
    [+] You can now specify which widget logger engine message displays must be used by TaskManagerGui when assigning logger engines to tasks.
    [+] Each task can now explicitly specify the widget logger engine message displays that TaskManagerGui must use when assigning logger engines to it.
    [+] Widget logger engines much improved to allow multiple message tabs to be shown in a single widget logger engine.
    [+] Added ObserverWidget::view() function.

    [#] LoggerGui's widget logger engine creation functions got new parameter allowing you to specify which message displays
        must be shown in the widget logger engine.
    [#] It is no longer needed to enable categorized display in order to display category column in ObserverWidget in TableView mode.

    [*] Fixed CodeEditorWidget not initializing its display flags in its constructor.
    [*] Fixed setting of active subjects when FollowSelection hint is used and parent node is selected in ObserverWidget.
    [*} Fixed some "QFSFileEngine::open: No file name specified" messages in CodeEditorWidget.

    ============================
    QtilitiesExtensionSystem:
    ============================


    ============================
    QtilitiesProjectManagement:
    ============================


    ============================
    QtilitiesTesting:
    ============================


    ============================
    Plugins:
    ============================


    ============================